# Computer_Graphy

./: README.md
HW1/: 電腦圖學HW1.docx
HW1/CG1101_SampleCode/: CMakeLists.txt  blend.c  draw.c  menu.c  mouse_key.c  pix_rw_sample.c  simple.c  single_double_buffer.c
HW2/: 電腦圖學HW2.docx
HW2/Geometric Transformation Sample Code/: CMakeLists.txt  car.c  w  wind_mill.c
HW3/: 電腦圖學HW3.docx
HW3/Geometric Transformation Sample Code/: wind_mill.c
HW4/: 電腦圖學HW4.docx
HW4/Geometric Transformation Sample Code/: Test1.cpp  wind_mill.c
HW5/: 電腦圖學HW5.docx
HW5/Geometric Transformation Sample Code/: CMakeLists.txt  car.c  wind_mill.c
